Refactor MemoryCoordinatorProxy

Before this CL we used two callbacks to inject content -> base
dependency. Now we plan to add another method which will provide
remaining memory budget (WIP CL can be found [1]). Rather than adding
another callback we should simply use an interface to inject dependency.

[1] https://codereview.chromium.org/2479673002/

BUG=693430

Review-Url: https://codereview.chromium.org/2703743002
Cr-Commit-Position: refs/heads/master@{#451573}

Former-commit-id: 4e0e67fdb9bd900fb4f7d6e7166f60a53800e2ed